# adb-setup

./: pyproject.toml
adb_setup/: adb.py  config.py  io.py
config/: config_example.yaml
scripts/: install_apks.py
tests/: test_adb_setup.py
